# Autotrading

./: .env.example  .gitignore  CLAUDE.md  FINAL_TEST_STATUS.md  IB_DATA_AVAILABILITY_SUMMARY.md  MULTI_COLLECTOR_README.md  PAPER_TRADING_TEST_GUIDE.md  PHASE2_IB_TESTING_SUMMARY.md  PHASE3_DATA_PIPELINE_SUMMARY.md  TEST_EXECUTION_GUIDE.md  TWS_SETUP_GUIDE.md  architecture.md  check_market_hours.py  check_order_details.py  check_order_status.py  check_september.py  collect_historical_data.py  collect_historical_simple.py  collect_september_data.py  complete_round_trip_trading.py  coverage.xml  debug_account_info.py  debug_accounts.py  debug_get_order_api.py  debug_quotes.py  example_usage.py  find_account_hash.py  fix_initial_data.patch  implementation_roadmap.md  project_setup.md  pyproject.toml  pytest.ini  regime_detection_results.csv  requirements.txt  run_continuous_collector.py  run_multi_collector.py  run_multi_collector_v2.py  run_tests.py  start_trading.bat  stop_trading.bat  (+45 more)
.claude/: settings.local.json
.streamlit/: config.toml
autotrader/: main.py
autotrader/analysis/: __init__.py  report_generator.py  rotation_comparator.py  trade_analyzer.py
autotrader/backtest/: __init__.py  batch_simulator.py  dashboard_data.py  engine.py  simulator.py  trade_collector.py
autotrader/batch/: __init__.py  gap_filter.py  ranking.py  scanner.py  scheduler.py  types.py
autotrader/broker/: __init__.py  alpaca_adapter.py  base.py  paper.py
autotrader/core/: __init__.py  aggregator.py  config.py  event_bus.py  exceptions.py  logger.py  types.py
autotrader/dashboard/: app.py  charts.py  data_loader.py  live_app.py  live_charts.py  live_data.py  theme.py
autotrader/data/: batch_fetcher.py  live_store.py  market_sentiment.py  sqlite_store.py  store.py
autotrader/execution/: __init__.py  entry_manager.py  exit_rules.py  order_manager.py  position_monitor.py
autotrader/indicators/: __init__.py  base.py  engine.py
autotrader/portfolio/: allocation_engine.py  performance.py  position_tracker.py  regime_detector.py  regime_position_reviewer.py  regime_tracker.py  tracker.py  trade_logger.py
autotrader/risk/: manager.py  position_sizer.py
autotrader/rotation/: __init__.py  backtest_engine.py  event_driven.py  manager.py  types.py
autotrader/strategy/: __init__.py  adx_pullback.py  base.py  bb_squeeze.py  consecutive_down.py  ema_cross_trend.py  ema_pullback.py  engine.py  overbought_short.py  regime_dual.py  regime_momentum.py  registry.py  rsi_mean_reversion.py  sma_crossover.py  volume_divergence.py
autotrader/universe/: __init__.py  earnings.py  filters.py  optimizer.py  provider.py  scorer.py  selector.py
autotrading/: .env.example  .gitignore  README.md  install.bat  main.py  pytest.ini  requirements.txt  run_setup.bat  start_system.bat  test_phase1.bat
claudedocs/: PAPER_TRADING_TEST_REPORT.md  Paper_Trading_전환_가이드.md  Paper_Trading_테스트_결과_2025-10-10.md  automated_trading_success_report.md  complete_round_trip_trading_success_report.md  critical_test_gaps.py  quality_assessment_phase1.md  real_trading_readiness_report.md  schema_improvement_summary.md  test_improvement_plan.md  ticker_manager_refactor_summary.md  trading_service_test_results.md  실패_테스트_상세_분석_2025-10-07.md  종합_테스트_품질_분석_리포트_2025-10-07.md  테스트_실행_요약_2025-10-07.md
config/: default.yaml  strategy_params.yaml
migrations/: 001_rename_timestamp_columns.sql
scripts/: README.md  analyze_backtest.py  bump_version.py  health_check.py  log_analyzer.py  run_12th_backtest.py  run_13th_backtest.py  run_14th_backtest.py  run_15th_backtest.py  run_16th_backtest.py  run_17th_backtest.py  run_18th_backtest.py  run_backtest.py  run_backtest_dashboard.py  run_batch_backtest.py  run_live_dashboard.py  run_live_monitor.py  run_status_monitor.py  run_swing_backtest.py  run_swing_dashboard.py  run_ticker_update.py  run_universe_selection.py  table_viewer.py  view_tickers.py  watchdog.py
tests/: README.md  conftest.py  pytest.ini  quality_assessment_report.md  run_tests.py  run_tests_fixed.py  test_edge_cases.py  test_paper_trading.py  test_phase2_ib.py
(+202 files in other folders)
