[project]
name = "autotrader"
version = "3.1.0"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.33.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "yfinance>=0.2.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
dashboard = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]

[tool.setuptools.packages.find]
include = ["autotrader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require external services)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
